@@ -70,10 +70,10 @@ Sample XML output:
 .Vb
 \&<I O="0" T="[UNIVERSAL 16]" TL="2" V="Indefinite" A="SEQUENCE">
 \&  <P O="2" T="[UNIVERSAL 19]" TL="2" V="2" A="PrintableString">US</P>
-\&  <C O="6" T="[UNIVERSAL 16]" TL="2" V="11" A="SEQUENCE">
+\&  <C O="6" T="[UNIVERSAL 16]" TL="2" V="6" A="SEQUENCE">
 \&    <P O="8" T="[UNIVERSAL 2]" TL="2" V="4" A="INTEGER" F>832970823</P>
-\&  </C T="[UNIVERSAL 16]" A="SEQUENCE">
-\&</I O="14" T="[UNIVERSAL 16]" A="SEQUENCE">
+\&  </C O="14" T="[UNIVERSAL 16]" A="SEQUENCE" L="8">
+\&</I O="14" T="[UNIVERSAL 0]" TL="2" L="16">
 .Ve
 .SH EXAMPLES
 Decode the given Tag/Length sequence given in hexadecimal form:
